--- a/about.css
+++ b/about.css
@@ -248,7 +248,7 @@
             /* padding-left: 5px; */
             margin-left: 70px;
             padding-top: 30px;
-            margin-bottom: -8%;
+            margin-bottom: -70px;
             font-size: 25px;
         }
 
@@ -261,11 +261,11 @@
             clear: both;
             /* display: table-cell; */
             /* padding-left: 6%; */
-            margin-left: 4%;
-            margin-top: 30%;
+            margin-left: 15px;
+            margin-top: 70px;
             font-size: 20px;
             margin-right: 5%;
-            margin-bottom: -7px;
+            /* margin-bottom: -7px; */
         }
 
         #content p {
